Change interal checking of executatble callbacks

--- a/sample/index.html
+++ b/sample/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<div id="sample"></div>
+		<div data-load="test" id="sample"></div>
 		<script type="text/javascript" src="sample.js"></script>
 		<script type="text/javascript" src="boot.js"></script>
 	</body>
