--- a/sample/index.html
+++ b/sample/index.html
@@ -7,7 +7,8 @@
 
 	<body>
 		<div data-load="test" id="sample"></div>
-		<script type="text/javascript" src="sample.js"></script>
+		<div data-load="test" id="sample2"></div>
+
 		<script type="text/javascript" src="boot.js"></script>
 	</body>
 </html>
